# tlauc

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
resources/: tla-unicode.csv
src/: lib.rs  main.rs  strmeasure.rs  strquantity.rs
tests/: InvalidSyntax.tla  corpus_tests.rs
