[package]
name = "tlauc"
description = "Rewrites TLA⁺ specs to use Unicode symbols instead of ASCII, and vice-versa"
version = "0.1.3"
authors = ["Andrew Helwer <2n8rn1w1f@mozmail.com>"]
repository = "https://github.com/tlaplus-community/tlauc"
license = "MIT"
readme = "README.md"
keywords = ["tlaplus", "unicode"]
categories = ["command-line-utilities", "text-editors"]
edition = "2018"
exclude = ["tests", ".github", ".gitignore", ".gitmodules"]

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
csv = "1.1.6"
serde = { version = "1.0.149", features = ["derive"] }
tree-sitter = "0.20.9"
tree-sitter-tlaplus = "0.6.2"

[dev-dependencies]
glob = "0.3.0"
rayon = "1.6.1"
